# Connect4

./: .gitignore  CMakeLists.txt  README.md  c4_utils.c  c4_utils.h  connect-4-utils.h  evaluation.c  evaluation.h  main.c  play.c  play_mode.c  server.py  tester.c  transposition_table.c  util_mode.c
.github/workflows/: c-cpp.yml
gui/: Connect4  README.md  package-lock.json  package.json
gui/src/: App.js  style.js
gui/src/components/: Board.js  Cube.js  EvaluationBar.js  Form.js  MyModal.js
include/: c4_utils.h  minimax.h
scripts/: machine_vs_machine.py  requirements.txt  server.py  test_server.py  wrapper.py
src/: c4_utils.c  evaluation.c  minimax.c  play_mode.c  tester.c
